# secretgraph

./: .babelrc  .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  TODO.md  apollo.config.js  code_of_conduct.md  debugrun.py  debugrun.sh  docker-compose.base.yml  docker-compose.yml  install-deps.sh  local-extensions.graphql  manage.py  nginx-docker.conf.template  package-lock.json  package.json  pyproject.toml  schema.graphql  schema.json  tox.ini  tsconfig-base.json  tsconfig.json  webpack.config.js
.github/workflows/: codeql-analysis.yml
Client/js/: index.tsx
Client/js/components/Headerbar/: index.tsx
Client/js/components/Main/: index.tsx
assets/js/: index.tsx  loader.tsx  serviceworker.ts
assets/js/Client/: constants.ts  contexts.ts  environment.tsx  index.tsx  interfaces.ts  messages.ts  theme.tsx
assets/js/Client/components/: ActionBar.tsx  ActionsDialog.tsx  DecisionFrame.tsx  ElementFrames.tsx  HeaderBar.tsx  MapSelect.tsx  SideBar.tsx  SunEditor.tsx  TokenDialog.tsx  UploadButton.tsx  misc.tsx
assets/js/Client/constants/: index.tsx
assets/js/Client/editors/: cluster.tsx  config.tsx  contact.tsx  custom.tsx  file.tsx  index.tsx  keys.tsx  postbox.tsx  source.tsx
assets/js/Client/pages/: DocumentEditor.tsx  DocumentForm.tsx  DocumentFrames.tsx  DocumentViewer.tsx  Help.tsx  Main.tsx  SettingsImporter.tsx  index.tsx
assets/js/Client/queries/: cluster.ts  content.ts  node.ts  server.ts
assets/js/Client/utils/: action.ts  cluster.ts  config.ts  encryption.ts  graphql.ts  hooks.tsx  iterable.ts  misc.ts  operations.ts  set.ts  typing.ts
docs/: README.md
docs/implementation/: actions.md  api.md  clientconfig.md  design.md  documents.md  security.md  structure.md  tags.md  trustedkeys.md
docs/specifications/: authentication.md  clientside-bridges.md  security.md  verification.md
js-packages/client/: package.json  tsconfig.json
js-packages/client/src/: Definitions.tsx  contexts.ts  hooks.tsx  index.tsx  messages.ts  theme.tsx
js-packages/client/src/Client/: Definitions.tsx  contexts.ts  hooks.tsx  index.tsx  messages.ts  theme.tsx
js-packages/client/src/components/: ActionBar.tsx  ActionsDialog.tsx  ConfigProtected.tsx  DecisionFrame.tsx  HeaderBar.tsx  misc.tsx
js-packages/client/src/editors/: ChannelStore.tsx  Persona.tsx  Workday.tsx  cluster.tsx  config.tsx  custom.tsx  file.tsx  index.tsx  keys.tsx  loading.tsx
js-packages/client/src/pages/: Help.tsx  Login.tsx  Main.tsx  Register.tsx
js-packages/dompurify-custom/: package.json  tsconfig.json
js-packages/dompurify-custom/src/: index.ts
js-packages/graphql-queries/: package.json  tsconfig.json
js-packages/graphql-queries/src/: cluster.ts  config.ts  content.ts  key.ts  node.ts  server.ts
js-packages/misc/: package.json  tsconfig.json
js-packages/misc/src/constants/: index.d.ts  index.js  index.js.map  index.ts
js-packages/misc/src/interfaces/: index.d.ts  index.js  index.js.map  index.ts
js-packages/misc/src/queries/: cluster.d.ts  cluster.js  cluster.js.map  cluster.ts  content.d.ts  content.js  content.js.map  content.ts  node.d.ts  node.js  node.js.map  (+4 more)
js-packages/rdf/: package.json  tsconfig.json
js-packages/rdf-editors/: package.json  tsconfig.json
js-packages/secretgraph/: package.json
js-packages/ui-components/: package.json  tsconfig.json
js-packages/ui-components/src/: DecisionFrame.tsx  SunEditor.tsx  UploadButton.tsx  misc.tsx
secretgraph/: asgi.py  schema.py  urls.py  wsgi.py
secretgraph/constants/: __init__.py
secretgraph/core/: constants.py  exceptions.py  typings.py
secretgraph/core/utils/: attestation.py  base_crypto.py  crypto.py  graphql.py  hashing.py  messaging.py  verification.py
secretgraph/proxy/: apps.py  js_messages.py  urls.py  views.py
secretgraph/queries/: cluster.py  config.py  content.py  key.py  node.py  server.py
secretgraph/server/: __init__.py  actions.py  admin.py  apps.py  fields.py  forms.py  messages.py  models.py  schema.py  signals.py  strawberry_extensions.py  typings.py  urls.py  utils.py  validators.py  view_decorators.py  views.py  widgets.py
secretgraph/server/actions/: fetch.py  handler.py  update.py  view.py
secretgraph/server/migrations/: 0001_initial.py  0002_cluster_user.py  0002_clustergroup_userselectable_netgroup_userselectable.py  0002_component_user.py  0002_spider_user.py  0002_split_globalgroup.py  0003_netgroup_hidden.py  0004_alter_sgroupproperty_options_and_more.py  0005_alter_clustergroup_clusters.py  0006_content_locked_alter_action_nonce_and_more.py  0007_alter_content_file_accessed.py  0008_content_cryptoparams.py  0009_move_nonce.py  0010_remove_content_nonce.py
secretgraph/server/schema/: __init__.py  arguments.py  definitions.py  filters.py  mutations.py  nodes.py  schema.py  shared.py  subscriptions.py
secretgraph/server/templatetags/: secretgraph.py
secretgraph/server/utils/: arguments.py  auth.py  conf.py  encryption.py  hashing.py  mark.py  misc.py
secretgraph/server/views/: update.py  view.py
secretgraph/settings/: .gitignore  __init__.py  debug.py  default.py  docker.py  test.py  withclient.py
secretgraph/tools/: check_key.py  config.py  initialize_cluster.py  move_graph.py
secretgraph/user/: __init__.py  abstract_models.py  admin.py  apps.py  models.py  schema.py  signals.py  urls.py
secretgraph/user/migrations/: 0001_initial.py
secretgraph/utils/: attestation.py  auth.py  encryption.py  graphql.py  messaging.py  misc.py
src/constants/: __init__.py
src/proxy/: views.py
src/secretgraph/: schema.py
src/secretgraph/server/: forms.py  models.py  views.py
src/secretgraph/settings/: __init__.py
src/server/: apps.py  models.py  schema.py  signals.py
src/settings/: __init__.py
tests/: test_auth.py  test_basic.py  test_cryptography.py  test_dependencies.py  test_load.py  test_registry.py  test_schema_fuzzing.py  test_schemathesis.py  test_transfer.py
tests/fixtures/: recoverable_broken_db.json
tools/: compile-messages.sh  debugrun.py  generate_py_queries.py  start.py  start.sh  start_docker.sh  start_noroot.sh  sync.py  test.sh
(+236 files in other folders)
