[tool.poetry]
name = "secretgraph"
description = "A secure, decentral identity graph"
version = "0.1"
license = "MIT"
authors = ["Alexander Kaftan"]
homepage = "https://secretgraph.net"
readme = "README.md"
repository = "https://github.com/devkral/secretgraph"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]

keywords = [
  "online identity", "decentral networks"
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
cryptography = "*"
rdflib = '*'
certifi = "*"
argon2-cffi = "*"
httpx = {version = "*", extras = ["http2"]}
httpcore = {version = "*", extras = ["asyncio"]}
gql = {version = ">=3.5", extras = ["websockets"]}
django = {version = '>=4.2', optional = true}
channels = {version = ">=4.0", optional = true}
graphene-protector = {version=">=0.8.0", optional = true}
strawberry-graphql = {version=">=0.183",  optional = true}
strawberry-graphql-django = {version=">=0.10", optional = true}
mysqlclient = {version="*", optional = true}
psycopg = {version="*", extras=["binary","pool"], optional = true}
django-manifest-loader = {version="*", optional = true}
django-fast-ratelimit = {version=">=3.0.0", optional = true}
django-fast-iprestrict = {version=">=0.12.0", optional = true}
nh3 = {version="*", optional = true}


[tool.poetry.group.test.dependencies]
schemathesis = "*"
faker = "*"

[tool.poetry.group.dev.dependencies]
django-manifest-loader = "*"
django-fast-ratelimit = ">=7.0.0"
django-fast-iprestrict = ">=0.12"
nh3 = "*"
graphene-protector = ">=0.7.2"
django = ">=4.2"
channels = {version = '>=4.0', extras = ["daphne"] }
strawberry-graphql = {version = '>=0.145', extras = ["debug"] }
strawberry-graphql-django = ">=0.10"
tox = "*"


[tool.poetry.extras]
server = [
    "django",
    "channels",
    "graphene-protector",
    "strawberry-graphql",
    "strawberry-graphql-django",
    "django-fast-ratelimit",
    "django-manifest-loader",
]
proxy = [
    "nh3"
]
postgresql = ["psycopg"]
mysql = ["mysqlclient"]
iprestrict = ["django-fast-iprestrict"]


[tool.black]
line-length = 79

[tool.isort]
profile="black"

[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"
